Portals/_default/Skins/Vanjaro/Resources/css/skin.css
/* ... */
            div.actionMenu ul.dnn_mact > li > a {
                display: block;
                width: 32px;
                background-color: #3d3c3c;
                color: #ffffff;
                font-size: 16px;
                line-height: 22px;
                text-align: center;
                text-decoration: none;
                padding: 5px 10px;
                float: right;
                border-radius: 100%;
                transition: border-radius 0.1s ease;
            }


                div.actionMenu ul.dnn_mact > li > a > svg {
                    fill: #fff;
                }

            /* Secondary level */
            div.actionMenu ul.dnn_mact > li ul {
                /* Styles for all sub levels */
                display: none;
                position: absolute;
                top: 20px;
                padding: 0;
                margin: 0;
                margin-right: -1px;
                background: #3d3c3c;
                list-style-type: none;
            }

            div.actionMenu ul.dnn_mact > li > ul > li {
                /*display: block;
                    padding: 0;
                    margin: 0;*/
                /*border-top: 1px solid #cccccc;*/
                white-space: nowrap;
                /*background: #3b97e3;
                    transition: background-color .25s;*/
            }

            /*div.actionMenu ul.dnn_mact > li > ul > li:first-child {
                        border: none;
                    }*/



            /*div.actionMenu ul.dnn_mact > li ul a {
                display: block;
                padding: 3px 0 3px 6px;
                color: #fff;
                text-decoration: none;
                overflow: hidden;
                font-size: 11px;
            }*/

            div.actionMenu ul.dnn_mact > li ul a > * {
                display: inline-block;
                margin-right: 5px;
                white-space: nowrap;
                overflow: hidden;
                text-overflow: ellipsis;
                width: 120px;
            }

.tlb-app-setting-panel, .managemenu {
    min-width: 130px;
}

.tlb-app-setting-panel__option, .managemenu {
    padding: 3px 6px;
    font-size: 12px;
    background: #3b97e3;
    color: #FFF;
    white-space: nowrap;
}

.managemenu {
    font-size: 14px;
    padding: 5px;
    background-color: transparent;
}

    .managemenu a {
        display: block;
        padding: 0 5px
    }

    .managemenu:hover a {
        background: #585858;
    }

.tlb-app-setting-panel__option:hover {
    background: #2c8cdc;
}

.dnnFormMessage {
    display: block;
    padding: 17px 18px;
    margin-bottom: 18px;
    border: 1px solid rgba(2,139,255,0.2);
    background: rgba(2,139,255,0.15);
    -webkit-border-radius: 3px;
    border-radius: 3px;
}

    .dnnFormMessage.dnnFormError,
    .dnnFormMessage.dnnFormValidationSummary {
        background-color: #ffd9d9; /* red */
        border: 1px solid #ffadad; /* red */
    }

    .dnnFormMessage.dnnFormWarning {
        background-color: #ffffd9; /* yellow */
        border: 1px solid #eaeaa4; /* yellow */
    }

    .dnnFormMessage.dnnFormSuccess {
        background-color: #d9ffd9; /* green */
        border: 1px solid #95c46f; /* green */
    }

.sidebar-open .vj-wrapper {
    position: relative;
    height: 100%;
}

/*Menu Alignment*/

div[alignment="left"] [data-block-type="Menu"] nav .collapse .navbar-nav,
div[alignment="left"] [data-block-type="Menu"] nav.navbar.navbar-expand-lg {
    justify-content: flex-start;
}

div[alignment="center"] [data-block-type="Menu"] nav .collapse .navbar-nav,
div[alignment="center"] [data-block-type="Menu"] nav.navbar.navbar-expand-lg {
    justify-content: center;
}

div[alignment="right"] [data-block-type="Menu"] nav .collapse .navbar-nav,
div[alignment="right"] [data-block-type="Menu"] nav.navbar.navbar-expand-lg {
    justify-content: flex-end;
}

.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
}

    .embed-container iframe, .embed-container video {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: 0;
    }

a.dnnPrimaryAction {
    color: #fff !important;
    background: #337ab7 !important;
    border-color: #2e6da4 !important;
    box-shadow: none !important;
    font-size: 13px;
    border-radius: 5px !important;
    font-weight: 600;
}

a.dnnSecondaryAction {
    background: transparent;
    border: 0;
    box-shadow: none;
    font-weight: normal;
    font-size: 14px;
}

.dnnActions {
    float: right;
}

.list-box .list {
    display: inline-block;
}

    .list-box .list .list-item .vj-icon {
        margin-top: -1px;
    }

/*
Theme.css start
*/
body,
#dnn_ContentPane {
    font-family: 'Poppins', OpenSans !important;
}



/*.ResetPassword-container #btnChangePassword .form-ResetPassword .Login-link {
	color: #fff !important;
	background: #444;
	border-color: #444;
}*/

.spinner-grow-sm {
    vertical-align: middle;
    margin-top: -2px;
}

/*User Profile*/



.registerterms #checktermcondition-error {
    float: right;
    position: absolute;
    bottom: -20px;
    margin-left: -22px;
}



/*
Theme.css end
*/


.img-fluid {
    width: 100%;
}

.LoginPanel {
    width: 100% !important;
}

.vj-section {
    position: relative;
    padding-top: 50px;
    padding-bottom: 50px;
    background-position: center center;
    background-attachment: scroll;
    background-repeat: no-repeat;
    background-size: auto;
    /*z-index: 1;*/
}

.link,
.icon-box,
.list-box,
.image-box,
.button-box {
    display: inline-block;
}

.vj-divider {
    border-top-width: 10px;
    border-top-style: solid;
    margin-top: 15px;
    margin-bottom: 15px;
    width: 100%;
}

.vj-heading {
    display: block;
    text-align: left;
    font-size: 2vw;
}

.vj-text {
    display: block;
    text-align: left;
    font-size: 1vw;
}
/* ... */

